using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ValoresAnimator : MonoBehaviour
{
    internal static string isMoving= "isMoving";
    internal static string isAttacking= "isAttacking";

    public static string isGrounded = "isGrounded";

    public static string jump = "jump";
    public  static string isOnWall="isOnWall";
    public static string isOnCeiling="isOnCeiling";
    public static string hasTarget="hasTarget";
    public static string isAlive= "isAlive";
    public static string Hit="Hit";
    public static string isHit="isHit";
    public static string attackCooldown= "attackCooldown";
}
